<resources>
    <string name="app_name">One Thought</string>

    <string name="content_description">image</string>
    <string name="zero">0</string>

    <!-- ADS -->

    <!-- ERROR -->
    <string name="sww">Vaya, algo ha salido mal</string>
    <string name="error_title">Ha ocurrido un problema</string>
    <string name="error_description">Inténtalo de nuevo más tarde</string>
    <string name="error_btn">Aceptar</string>

    <!-- ROUNDS -->
    <string name="rounds_title">¿Cuántas rondas quieres jugar?</string>
    <string name="rounds_five">5</string>
    <string name="rounds_eight">8</string>
    <string name="rounds_ten">10</string>
    <string name="rounds_fifteen">15</string>
    <string name="rounds_twenty">20</string>
    <string name="rounds_twenty_five">25</string>
    <string name="rounds_none">Ninguna</string>

    <string name="rounds_total">%1s/%2s Rondas</string>
    <string name="rounds_points">Puntos:</string>
    <string name="rounds_connection">Conexión mental</string>
    <string name="rounds_connection_zero">0%</string>
    <string name="rounds_connection_percent">%s%%</string>

    <string name="round_finished_answer">¡Respuesta!</string>
    <string name="round_finished_title">¿Habéis dicho lo mismo?</string>
    <string name="round_finished_positive">Sí</string>
    <string name="round_finished_negative">No</string>

</resources>