<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_box"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/medium"
    android:paddingVertical="@dimen/large">

    <LinearLayout
        android:id="@+id/ll_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:contentDescription="@string/content_description"
            android:src="@drawable/ic_speak" />

        <TextView
            android:id="@+id/tv_answer"
            style="@style/BigTextView_Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/medium_small"
            android:text="@string/round_finished_answer" />

        <ImageView
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:contentDescription="@string/content_description"
            android:scaleX="-1"
            android:src="@drawable/ic_speak" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_answer"
        tools:visibility="visible">

        <TextView
            android:id="@+id/tv_title"
            style="@style/MediumTextView_Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/medium"
            android:gravity="center"
            android:text="@string/round_finished_title"
            android:textAllCaps="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:id="@+id/btn_yes"
                style="@style/BigTextView_Bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.475"
                android:background="@drawable/click_effect"
                android:backgroundTint="@color/light_green"
                android:elevation="@dimen/elevation"
                android:gravity="center"
                android:paddingVertical="@dimen/medium_small"
                android:text="@string/round_finished_positive" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.05" />

            <TextView
                android:id="@+id/btn_no"
                style="@style/BigTextView_Bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.475"
                android:background="@drawable/click_effect"
                android:backgroundTint="@color/light_red"
                android:elevation="@dimen/elevation"
                android:gravity="center"
                android:paddingVertical="@dimen/medium_small"
                android:text="@string/round_finished_negative" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_next_round"
        style="@style/BigTextView_Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingHorizontal="@dimen/large"
        android:text="Preparáos para la siguiente ronda"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>